--- a/public/404.html
+++ b/public/404.html
@@ -5,23 +5,46 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Page Not Found</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
     <style>
         *{
             padding: 0;
             margin: 0;
             width: 100%;
+            font-family: 'Fira Sans'
         }
 
         .error-page{
             background-color: whitesmoke;
             color: black;
+            font-size: 50px;
             width: 100%;
             height: 747px;
             display: flex;
-            flex-direction: column;
             flex-wrap: wrap;
+            flex-direction: column;
             justify-content: center;
             align-items: center;
+            row-gap: 10px;
+        }
+
+        .error-page h2{
+            border: 1px solid red;
+            width: fit-content;
+            height: fit-content;
+        }
+
+        .error-page a{
+            border: 1px solid red;
+            height: fit-content;
+            width: fit-content;
+            text-decoration: none;
+            color: black;
         }
 
     </style>
@@ -29,6 +52,7 @@
 <body>
     <div class="error-page">
         <h2>404! Page not found!</h2>
+        <a href="/">Home</a>
     </div>
 </body>
 </html>
