media querry to 404.html

--- a/public/404.html
+++ b/public/404.html
@@ -44,6 +44,12 @@
             text-decoration: none;
             color: black;
         }
+        /* Media Querries */
+        @media(max-width: 720px){
+            .error-page{
+                font-size: 40px;
+            }
+        }
 
     </style>
 </head>
