media query change

--- a/public/404.html
+++ b/public/404.html
@@ -46,8 +46,8 @@
         }
         /* Media Querries */
         @media(max-width: 720px){
-            .error-page{
-                font-size: 40px;
+            .error-page h2{
+                font-size: 30px;
             }
         }
 
