--- a/public/404.html
+++ b/public/404.html
@@ -51,6 +51,12 @@
             }
         }
 
+        @media(max-width: 570px){
+            .error-page h2{
+                font-size: 20px;
+            }
+        }
+
     </style>
 </head>
 <body>
