--- a/public/404.html
+++ b/public/404.html
@@ -52,7 +52,7 @@
         }
 
         @media(max-width: 570px){
-            .error-page h2{
+            .error-page h2, a{
                 font-size: 20px;
             }
         }
