--- a/public/404.html
+++ b/public/404.html
@@ -24,7 +24,7 @@
             color: black;
             font-size: 50px;
             width: 100%;
-            height: 747px;
+            height: 100vh;
             display: flex;
             flex-wrap: wrap;
             flex-direction: column;
